K8S/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mymanualgithub-app-ns
  labels:
    name: mymanualgithub-app-ns
